# Potato-Search-Engine

./: CMakeLists.txt  README.md  potatosearch.cc  stopwords.txt
lib/: defines.h  libevaluate.cc  libevaluate.h  libgeneral.h  libhash.cc  libhash.h  libindexer.cc  libindexer.h  libinverted_list.cc  libinverted_list.h  libquery_processer.cc  libquery_processer.h  libstring_operations.cc  libstring_operations.h
